@@ -1,8 +1,7 @@
 ﻿using Avalonia;
 using Slithin.Core.ItemContext;
-using Slithin.Core.Remarkable;
-using Slithin.Core.Services;
 using Slithin.Core.Remarkable.Models;
+using Slithin.Core.Services;
 
 namespace Slithin.Commands.ContextCommands.Notebooks;
 
