@@ -1,28 +1,0 @@
-﻿namespace Slithin.Core.Remarkable.Exporting.Rendering;
-
-public enum Coords : uint
-{
-    /**
-         * Minimum value of the X coordinate, or X coordinate
-         * of the left-side of the bounding rectangle.
-         */
-    MinX = 0,
-
-    /**
-         * Maximum value of the X coordinate, or X coordinate
-         * of the right-side of the bounding rectangle.
-         */
-    MaxX = 1404,
-
-    /**
-         * Minimum value of the Y coordinate, or Y coordinate
-         * of the upper-side of the bounding rectangle.
-         */
-    MinY = 0,
-
-    /**
-         * Maximum value of the Y coordinate, or Y coordinate
-         * of the bottom-side of the bounding rectangle.
-         */
-    MaxY = 1872,
-}
